--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 
 #frame{
     border: 12px solid black;
-    font-family: 'Sono', sans-serif;
+    font-family: 'Teko', sans-serif;
     height: 30rem;
     margin-top: 4rem;
     color: rgb(23, 16, 62);
@@ -27,13 +27,6 @@ h3{
     width: 30rem;
     /* margin-left: 25rem; */
     /* border: 1px solid white; */
-}
-
-.div-buttons{
-    /* display: flex; */
-    /* justify-content: center;
-    align-items: center; */
-    /* border: 2px solid white; */
 }
 
 .buttons{
