Added fotn family to buttons

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ h3{
     margin-left: 2rem;
     color: white;
     border: 1px solid white;
-    font-family: 'Sono', sans-serif;
+    font-family: 'Teko', sans-serif;;
 
 }
 
